--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,36 @@ services:
       - .:/app
       - /app/node_modules
     environment:
-      - VITE_API_URL=http://localhost:3000
+      - VITE_API_URL=https://promedicao.com/api
     depends_on:
       - db
+      - backend
+
+  backend:
+    build:
+      context: ./backend
+    ports:
+      - "4000:3000"
+    environment:
+      - DATABASE_URL=postgresql://gestor:gestor@db:5432/gestor_obras?schema=public
+      - JWT_SECRET=change-me
+      - RESEND_API_KEY=change-me
+      - RESEND_FROM_EMAIL=nao-responda@exemplo.com
+    depends_on:
+      - db
+
+  nginx:
+    image: nginx:1.25-alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    depends_on:
+      - app
+      - backend
 
   db:
     image: postgres:16-alpine
