feat: add admin configuration variables to production environment file

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -1,6 +1,9 @@
 VITE_API_URL=https://promedicao.com/api
 DATABASE_URL=postgresql://USER:PASS@db:5432/gestor_obras?schema=public
 JWT_SECRET=replace-me
+ADMIN_INSTANCE_NAME=Instancia Principal
+ADMIN_EMAIL=admin@exemplo.com
+ADMIN_PASSWORD=admin123
 RESEND_API_KEY=replace-me
 RESEND_FROM_EMAIL=no-reply@promedicao.com
 POSTGRES_DB=gestor_obras
