--- a/nginx/conf.d/promedicao.prod.conf
+++ b/nginx/conf.d/promedicao.prod.conf
@@ -2,6 +2,10 @@ server {
   listen 80;
   server_name promedicao.com www.promedicao.com;
 
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+
   return 301 https://$host$request_uri;
 }
 
@@ -17,6 +21,10 @@ server {
   ssl_prefer_server_ciphers off;
 
   client_max_body_size 20m;
+
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
 
   location /api/ {
     proxy_pass http://backend:3000/;
