--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "17.0.0",
+    "lucide-react": "0.460.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "lucide-react": "0.460.0",
     "xlsx": "0.18.5",
-    "zod": "3.23.8",
-    "@hello-pangea/dnd": "17.0.0"
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "vite": "^5.4.1",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@types/node": "^25.2.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
-    "typescript": "^5.0.0"
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.0.0",
+    "vite": "^5.4.1"
   }
 }
