--- a/nginx/conf.d/promedicao.dev.conf
+++ b/nginx/conf.d/promedicao.dev.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name localhost promedicao.com www.promedicao.com;
+  server_name localhost canteirodigital.com www.canteirodigital.com;
 
   client_max_body_size 20m;
 
