--- a/nginx/conf.d/promedicao.prod.conf
+++ b/nginx/conf.d/promedicao.prod.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name promedicao.com www.promedicao.com;
+  server_name canteirodigital.com www.canteirodigital.com;
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
@@ -11,10 +11,10 @@ server {
 
 server {
   listen 443 ssl;
-  server_name promedicao.com www.promedicao.com;
+  server_name canteirodigital.com www.canteirodigital.com;
 
-  ssl_certificate /etc/letsencrypt/live/promedicao.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/promedicao.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/canteirodigital.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/canteirodigital.com/privkey.pem;
   ssl_session_timeout 1d;
   ssl_session_cache shared:SSL:10m;
   ssl_protocols TLSv1.2 TLSv1.3;
