--- a/nginx/conf.d/promedicao.conf
+++ b/nginx/conf.d/promedicao.conf
@@ -1,16 +1,16 @@
 server {
   listen 80;
-  server_name promedicao.com www.promedicao.com;
+  server_name canteirodigital.com www.canteirodigital.com;
 
   return 301 https://$host$request_uri;
 }
 
 server {
   listen 443 ssl;
-  server_name promedicao.com www.promedicao.com;
+  server_name canteirodigital.com www.canteirodigital.com;
 
-  ssl_certificate /etc/letsencrypt/live/promedicao.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/promedicao.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/canteirodigital.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/canteirodigital.com/privkey.pem;
   ssl_session_timeout 1d;
   ssl_session_cache shared:SSL:10m;
   ssl_protocols TLSv1.2 TLSv1.3;
