--- a/.env.prod.example
+++ b/.env.prod.example
@@ -4,6 +4,7 @@ JWT_SECRET=replace-me
 ADMIN_INSTANCE_NAME=Instancia Principal
 ADMIN_EMAIL=admin@exemplo.com
 ADMIN_PASSWORD=admin123
+ADMIN_IS_SUPERADMIN=true
 RESEND_API_KEY=replace-me
 RESEND_FROM_EMAIL=no-reply@canteirodigital.com
 POSTGRES_DB=gestor_obras
