feat: add CORS support with configurable origins in environment variables

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -10,3 +10,4 @@ RESEND_FROM_EMAIL=no-reply@canteirodigital.com
 POSTGRES_DB=gestor_obras
 POSTGRES_USER=gestor
 POSTGRES_PASSWORD=gestor
+CORS_ORIGINS=https://canteirodigital.com,https://www.canteirodigital.com
