--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,7 +1,13 @@
 services:
   nginx:
     ports:
-      - "80:80"
+      - "8082:80"
+      - "8444:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d/promedicao.http.conf:/etc/nginx/conf.d/default.conf:ro
+
+  backend:
+    environment:
+      - DATABASE_URL=postgresql://gestor:gestor@db:5432/gestor_obras?schema=public
+      - CORS_ORIGINS=http://localhost,http://localhost:3000,http://localhost:5173,http://127.0.0.1,http://127.0.0.1:3000,http://127.0.0.1:5173
