--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -5,7 +5,21 @@ services:
       - "8444:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d/promedicao.http.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/conf.d/local:/etc/nginx/conf.d:ro
+
+  app:
+    build:
+      context: .
+      target: dev
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_URL=${VITE_API_URL:-http://localhost:4000}
+    depends_on:
+      - backend
 
   backend:
     environment:
