--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -22,6 +22,10 @@ services:
       - backend
 
   backend:
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
+      - /app/uploads
     environment:
       - DATABASE_URL=postgresql://gestor:gestor@db:5432/gestor_obras?schema=public
       - CORS_ORIGINS=http://localhost,http://localhost:3000,http://localhost:5173,http://127.0.0.1,http://127.0.0.1:3000,http://127.0.0.1:5173
