--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "prisma db seed",
     "import:localstorage": "ts-node scripts/import-localstorage.ts",
+    "fix:duplicate-expenses": "ts-node scripts/fix-duplicate-forecast-expenses.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
