--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "0.460.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-quill-new": "^3.8.3",
     "react-router-dom": "6.26.2",
     "xlsx": "0.18.5",
     "zod": "3.23.8"
